@@ -16,6 +16,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Jochen Sprickerhof
   Peter Novak
   Terran Air
+  Rowan Thorpe
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
