@@ -42,8 +42,8 @@
  nav   PgDn            scroll down (forward) one page
  nav   ^b              scroll up (back) one page
  nav   PgUp            scroll up (back) up one page
- cmd   /STRING         search forwards for STRING
- cmd   ?STRING         search backwards for STRING
+ cmd   /STRING         search forwards for regular expression STRING
+ cmd   ?STRING         search backwards for regular expression STRING
  cmd   P [hmln]        set the current task's priority to H, M, L, or none
  cmd   p STRING        set the current task's project to STRING
  cmd   p STRING<tab>   set the current task's project to STRING using tab completion
